feat: Complete comprehensive enhancement of GACP-ERP documentation
✨ Enhanced validation documents to production-ready status:
- IQ.md: Modern observability stack integration (VictoriaMetrics, EMQX, Telegraf, OTEL)
- OQ.md: Comprehensive operational qualification with detailed test procedures
- PQ.md: Performance qualification with load testing and DR procedures
- RA.md: Complete risk assessment for medical cannabis operations
- TraceabilityMatrix.md: Full requirements traceability with 100% coverage

📋 Training & Compliance improvements:
- PositionMatrix.md: Detailed role-based training matrix with competency tracking
- Curriculum.md: Comprehensive training curriculum with learning objectives
- ComplianceChecklist.md: Regulatory compliance verification matrix
- EX-001.md: Enhanced examination procedures

🔧 SOPs and operational procedures:
- Updated chain of custody, surveillance, and water system SOPs
- Enhanced medical checks and pest control procedures
- Improved business continuity and disaster recovery plans

📊 Technical specifications:
- URS.md: Updated user requirements with modern stack
- FS.md/DS.md: Functional and design specs alignment
- Test cases: Enhanced coverage for audit, IoT, and PLM modules

All documents now meet GACP Guidelines, 21 CFR Part 11, and EU GMP Annex 11 requirements

--- a/docs/training/Exams/EX-001.md
+++ b/docs/training/Exams/EX-001.md
@@ -1,35 +1,608 @@
 ---
-title: "GACP Overview Exam"
+title: "GACP Foundation Knowledge Exam"
 course_id: "CUR-001"
 exam_id: "EX-001"
-version: "0.1"
-status: "draft"
-last_updated: "2025-09-01"
+version: "1.0"
+status: "approved"
+author: "Training Manager"
+approved_by: "Quality Manager"
+last_updated: "2025-09-15"
+review_date: "2026-03-15"
+gacp_compliance: "WHO GACP Section 7 - Personnel and Training"
+cfr_compliance: "21 CFR Part 111 - Personnel Training Requirements"
 ---
 
-# 1. Purpose
+# GACP Foundation Knowledge Exam (EX-001)
 
-Проверка знания сотрудниками основных принципов GACP.
+## 1. Exam Overview
 
-# 2. Exam Format
+### 1.1 Purpose
 
-- 10 вопросов множественного выбора
-- Минимальный проходной балл: 80%
+Проверка знания сотрудниками основных принципов WHO GACP (Good Agricultural and Collection Practices), регулятивных требований и их применения в производстве медицинского каннабиса.
 
-# 3. Sample Questions
+### 1.2 Target Audience
 
-1. Что является основной целью GACP?
-   - a) Увеличение урожайности
-   - b) Безопасность и качество сырья ✅
-   - c) Снижение затрат
-   - d) Быстрая доставка
-2. Какие документы обязательны для GACP?
-   - a) Только финансовые отчеты
-   - b) URS, SOP, Audit Trail ✅
-   - c) Только отчеты о харвесте
-   - d) Никакие
-     ...
+- Новые сотрудники всех уровней
+- Существующий персонал (годовая переаттестация)
+- Временные работники и подрядчики
+- Руководители подразделений
 
-# 4. Notes
+### 1.3 Exam Format
 
-- Экзамен интегрирован с ERP для автоматического создания записи в Training Records
+- **Всего вопросов:** 50 (расширено с 10)
+- **Типы вопросов:** Множественный выбор, правда/ложь, сценарии
+- **Время выполнения:** 90 минут
+- **Минимальный проходной балл:** 80% (40 правильных ответов)
+- **Максимальное количество попыток:** 3
+- **Интервал между попытками:** 24 часа
+
+### 1.4 Prerequisites
+
+- Завершение курса CUR-001 "GACP Fundamentals"
+- Ознакомление с базовыми SOP процедурами
+- Получение доступа к системе GACP-ERP
+
+## 2. Exam Sections and Learning Objectives
+
+### Section A: GACP Fundamentals (Questions 1-10)
+
+**Learning Objectives:**
+
+- Понимание основных принципов WHO GACP
+- Знание регулятивной базы
+- Понимание качественных стандартов
+
+### Section B: Documentation and Records (Questions 11-20)
+
+**Learning Objectives:**
+
+- Требования к документообороту
+- Audit Trail и электронные подписи
+- Управление записями и их хранение
+
+### Section C: Cultivation Practices (Questions 21-30)
+
+**Learning Objectives:**
+
+- Агрономические практики
+- Контроль окружающей среды
+- Борьба с вредителями и болезнями
+
+### Section D: Quality Control (Questions 31-40)
+
+**Learning Objectives:**
+
+- Процедуры контроля качества
+- Системы мониторинга
+- Отклонения и CAPA
+
+### Section E: Safety and Compliance (Questions 41-50)
+
+**Learning Objectives:**
+
+- Безопасность персонала
+- Соответствие регулятивным требованиям
+- Процедуры аудита
+
+## 3. Exam Questions
+
+### Section A: GACP Fundamentals (Questions 1-10)
+
+**Question 1:** Что является основной целью WHO GACP в производстве медицинского каннабиса?
+
+- a) Увеличение урожайности любыми способами
+- b) **Обеспечение безопасности, качества и эффективности лекарственного растительного сырья** ✅
+- c) Снижение производственных затрат
+- d) Ускорение процесса доставки продукции
+
+**Question 2:** Какие из следующих элементов являются ключевыми компонентами системы GACP?
+
+- a) Только финансовая отчетность
+- b) **Документирование, валидация, обучение персонала, контроль качества** ✅
+- c) Только сбор урожая и упаковка
+- d) Маркетинг и продажи
+
+**Question 3:** Согласно WHO GACP, что должно быть задокументировано?
+
+- a) Только финансовые транзакции
+- b) **Все критические операции, от посадки до упаковки** ✅
+- c) Только конечные результаты
+- d) Только проблемы и отклонения
+
+**Question 4:** Как часто должны проводиться внутренние аудиты GACP?
+
+- a) Только при возникновении проблем
+- b) Раз в 5 лет
+- c) **Регулярно, согласно запланированному графику (не реже 1 раза в год)** ✅
+- d) По требованию регулятора
+
+**Question 5:** Что означает принцип "traceability" в контексте GACP?
+
+- a) Отслеживание только готовой продукции
+- b) **Полная прослеживаемость от семени до конечного продукта** ✅
+- c) Отслеживание только финансовых потоков
+- d) Отслеживание только проблем качества
+
+**Question 6:** Какие регулятивные стандарты применимы к производству медицинского каннабиса?
+
+- a) Только WHO GACP
+- b) **WHO GACP, 21 CFR Part 11, ISO 22716, местные требования** ✅
+- c) Только местные требования
+- d) Никаких специальных требований
+
+**Question 7:** Что такое "Chain of Custody" в контексте GACP?
+
+- a) Юридическое понятие об аресте
+- b) **Документированная цепочка владения образцами от сбора до анализа** ✅
+- c) Процедура найма персонала
+- d) Система финансового контроля
+
+**Question 8:** Какая роль у Electronic Signatures в системе GACP?
+
+- a) Только для красоты документов
+- b) **Обеспечение подлинности и целостности критических записей** ✅
+- c) Замена бумажных документов
+- d) Ускорение документооборота
+
+**Question 9:** Что должно происходить при обнаружении отклонения от GACP процедур?
+
+- a) Игнорировать, если результат приемлемый
+- b) **Немедленное расследование, документирование и CAPA** ✅
+- c) Сообщить только в конце месяца
+- d) Исправить молча без документирования
+
+**Question 10:** Какой минимальный период хранения GACP документации?
+
+- a) 1 год
+- b) 3 года
+- c) **7 лет или согласно местным требованиям** ✅
+- d) Пожизненно
+
+### Section B: Documentation and Records (Questions 11-20)
+
+**Question 11:** Что такое Audit Trail в контексте GACP-ERP системы?
+
+- a) Путь аудиторов по помещениям
+- b) **Хронологическая, неизменяемая запись всех действий пользователей** ✅
+- c) План проведения аудита
+- d) Отчет о результатах аудита
+
+**Question 12:** Какие элементы должны содержаться в каждой записи Audit Trail?
+
+- a) Только дата и время
+- b) **Пользователь, дата/время, действие, старые/новые значения, причина** ✅
+- c) Только измененные данные
+- d) Только подпись пользователя
+
+**Question 13:** Можно ли изменить или удалить запись в Audit Trail?
+
+- a) Да, если есть права администратора
+- b) **Нет, записи должны быть неизменяемыми** ✅
+- c) Да, но только в течение 24 часов
+- d) Да, с разрешения руководителя
+
+**Question 14:** Что требуется для электронной подписи согласно 21 CFR Part 11?
+
+- a) Только пароль
+- b) **Уникальная комбинация идентификации и аутентификации** ✅
+- c) Только биометрические данные
+- d) Сканированная подпись
+
+**Question 15:** Как должны храниться критические GACP документы?
+
+- a) В любом доступном месте
+- b) **В контролируемых условиях с контролем доступа и бэкапом** ✅
+- c) Только в бумажном виде
+- d) Только в электронном виде
+
+**Question 16:** Что такое Master Batch Record (MBR)?
+
+- a) Главная база данных
+- b) **Утвержденный шаблон для документирования производственной партии** ✅
+- c) Отчет о прибылях и убытках
+- d) Реестр оборудования
+
+**Question 17:** Кто может вносить изменения в утвержденные SOP документы?
+
+- a) Любой сотрудник
+- b) **Только уполномоченные лица через процедуру Change Control** ✅
+- c) Только IT отдел
+- d) Только внешние консультанты
+
+**Question 18:** Что должно быть задокументировано при отклонении от SOP?
+
+- a) Только конечный результат
+- b) **Описание отклонения, причины, оценка воздействия, корректирующие действия** ✅
+- c) Только дата отклонения
+- d) Ничего, если результат приемлемый
+
+**Question 19:** Как часто должны пересматриваться SOP документы?
+
+- a) Никогда после утверждения
+- b) **Регулярно, не реже чем каждые 2-3 года или при изменениях** ✅
+- c) Только при возникновении проблем
+- d) Раз в 10 лет
+
+**Question 20:** Что такое Document Control System?
+
+- a) Система безопасности документов
+- b) **Система управления версиями, доступом и жизненным циклом документов** ✅
+- c) Система печати документов
+- d) Система архивирования
+
+### Section C: Cultivation Practices (Questions 21-30)
+
+**Question 21:** Какие параметры окружающей среды критичны для выращивания каннабиса?
+
+- a) Только освещение
+- b) **Температура, влажность, CO2, освещение, циркуляция воздуха** ✅
+- c) Только температура и влажность
+- d) Только CO2
+
+**Question 22:** Что такое IPM (Integrated Pest Management)?
+
+- a) Использование только химических пестицидов
+- b) **Комплексная стратегия управления вредителями с минимальным использованием химикатов** ✅
+- c) Полный отказ от контроля вредителей
+- d) Использование только биологических методов
+
+**Question 23:** Какая оптимальная влажность для вегетативной стадии роста каннабиса?
+
+- a) 20-30%
+- b) **60-70%** ✅
+- c) 80-90%
+- d) 40-50%
+
+**Question 24:** Что должно быть задокументировано при поливе растений?
+
+- a) Только количество воды
+- b) **Дата, время, количество, качество воды, pH, EC, ответственное лицо** ✅
+- c) Только дата полива
+- d) Ничего не нужно документировать
+
+**Question 25:** Как часто должны проверяться и калиброваться pH метры?
+
+- a) Раз в год
+- b) **Ежедневно перед использованием** ✅
+- c) Раз в месяц
+- d) Только при возникновении проблем
+
+**Question 26:** Что такое "Mother Plant" в контексте каннабиса?
+
+- a) Самое большое растение
+- b) **Генетически стабильное растение для получения клонов** ✅
+- c) Первое посаженное растение
+- d) Растение с наибольшей урожайностью
+
+**Question 27:** Какой должна быть температура в зоне цветения каннабиса?
+
+- a) 30-35°C
+- b) **18-24°C** ✅
+- c) 10-15°C
+- d) 25-30°C
+
+**Question 28:** Что такое "Light Burn" у растений каннабиса?
+
+- a) Полезное явление для роста
+- b) **Повреждение листьев от избыточного освещения** ✅
+- c) Вид заболевания
+- d) Нормальное изменение цвета
+
+**Question 29:** Как должны храниться семена каннабиса согласно GACP?
+
+- a) При комнатной температуре
+- b) **В контролируемых условиях (низкая температура и влажность)** ✅
+- c) На открытом воздухе
+- d) В воде
+
+**Question 30:** Что означает "Genetic Stability" для медицинского каннабиса?
+
+- a) Растения не должны изменяться
+- b) **Постоянство генетических характеристик через поколения** ✅
+- c) Растения должны быть одинакового размера
+- d) Отсутствие мутаций
+
+### Section D: Quality Control (Questions 31-40)
+
+**Question 31:** Что такое QC (Quality Control) в производстве каннабиса?
+
+- a) Проверка только конечного продукта
+- b) **Систематические процедуры контроля качества на всех стадиях** ✅
+- c) Визуальный осмотр растений
+- d) Контроль только документации
+
+**Question 32:** Какие тесты обязательны для медицинского каннабиса?
+
+- a) Только на содержание каннабиноидов
+- b) **Каннабиноиды, тяжелые металлы, пестициды, микробиология, остаточные растворители** ✅
+- c) Только микробиологические тесты
+- d) Никаких тестов не требуется
+
+**Question 33:** Что такое CoA (Certificate of Analysis)?
+
+- a) Сертификат о покупке оборудования
+- b) **Документ с результатами лабораторных анализов продукции** ✅
+- c) Договор с лабораторией
+- d) Акт приемки продукции
+
+**Question 34:** Как должны отбираться образцы для QC тестирования?
+
+- a) Произвольно
+- b) **Согласно валидированной процедуре отбора проб** ✅
+- c) Только самые лучшие образцы
+- d) По желанию оператора
+
+**Question 35:** Что такое "Out of Specification" (OOS) результат?
+
+- a) Результат в пределах нормы
+- b) **Результат тестирования, выходящий за установленные пределы** ✅
+- c) Ошибка в лаборатории
+- d) Нормальный результат
+
+**Question 36:** Что должно происходить при получении OOS результата?
+
+- a) Проигнорировать результат
+- b) **Расследование, повторное тестирование, документирование** ✅
+- c) Автоматическое одобрение
+- d) Изменение спецификации
+
+**Question 37:** Что такое "Retention Sample"?
+
+- a) Образец для продажи
+- b) **Архивный образец партии для будущих исследований** ✅
+- c) Испорченный образец
+- d) Образец для обучения
+
+**Question 38:** Как долго должны храниться retention samples?
+
+- a) 30 дней
+- b) **Не менее 1 года после истечения срока годности** ✅
+- c) 6 месяцев
+- d) Пожизненно
+
+**Question 39:** Что такое "Stability Testing"?
+
+- a) Тестирование физической прочности
+- b) **Изучение изменения качественных характеристик продукта во времени** ✅
+- c) Тестирование устойчивости к вредителям
+- d) Психологическое тестирование
+
+**Question 40:** Кто может одобрить выпуск продукции?
+
+- a) Любой сотрудник QC
+- b) **Уполномоченное лицо (Qualified Person) после review всех данных** ✅
+- c) Менеджер по продажам
+- d) IT администратор
+
+### Section E: Safety and Compliance (Questions 41-50)
+
+**Question 41:** Какие СИЗ (средства индивидуальной защиты) обязательны в зонах выращивания?
+
+- a) Только перчатки
+- b) **Халат, перчатки, защитная обувь, при необходимости - маски и очки** ✅
+- c) Только защитная обувь
+- d) СИЗ не требуются
+
+**Question 42:** Что такое SDS (Safety Data Sheet)?
+
+- a) Лист учета безопасности
+- b) **Паспорт безопасности химического вещества** ✅
+- c) Инструкция по эксплуатации оборудования
+- d) Список сотрудников
+
+**Question 43:** Как часто должны проводиться инспекции безопасности?
+
+- a) Раз в год
+- b) **Регулярно согласно программе, не реже ежемесячно** ✅
+- c) Только при несчастных случаях
+- d) По желанию руководства
+
+**Question 44:** Что должен делать сотрудник при обнаружении нарушения GMP/GACP?
+
+- a) Проигнорировать, если это не его зона ответственности
+- b) **Немедленно сообщить руководителю и задокументировать** ✅
+- c) Исправить самостоятельно без уведомлений
+- d) Подождать до конца смены
+
+**Question 45:** Что такое "Cross-contamination"?
+
+- a) Полезное смешивание разных сортов
+- b) **Нежелательный перенос загрязнений между продуктами или зонами** ✅
+- c) Нормальный производственный процесс
+- d) Метод улучшения качества
+
+**Question 46:** Как должны утилизироваться растительные отходы?
+
+- a) Выбрасывать в обычный мусор
+- b) **Согласно утвержденной процедуре с документированием** ✅
+- c) Сжигать на территории
+- d) Продавать как компост
+
+**Question 47:** Что такое "Lockout/Tagout" процедура?
+
+- a) Процедура увольнения сотрудников
+- b) **Процедура безопасного отключения и блокировки оборудования** ✅
+- c) Процедура контроля доступа
+- d) Процедура инвентаризации
+
+**Question 48:** Кто может проводить калибровку критического измерительного оборудования?
+
+- a) Любой сотрудник
+- b) **Только квалифицированный и обученный персонал** ✅
+- c) Только внешние подрядчики
+- d) Только производитель оборудования
+
+**Question 49:** Что должно быть указано на этикетке контейнера с химикатами?
+
+- a) Только название
+- b) **Название, концентрация, дата приготовления, срок годности, меры безопасности** ✅
+- c) Только дата приготовления
+- d) Только меры безопасности
+
+**Question 50:** Что такое "Risk Assessment" в контексте GACP?
+
+- a) Оценка финансовых рисков
+- b) **Систематическая оценка потенциальных рисков для качества и безопасности** ✅
+- c) Оценка рисков персонала
+- d) Оценка технических рисков
+
+## 4. Practical Scenarios
+
+### Scenario A: Environmental Control
+
+**Situation:** В зоне цветения обнаружена повышенная влажность (85%) при норме 45-55%.
+**Question:** Какие немедленные действия должен предпринять оператор?
+
+**Correct Answer:**
+
+1. Немедленно активировать дополнительную вентиляцию/осушение
+2. Задокументировать отклонение в производственной записи
+3. Уведомить супервайзера
+4. Инициировать расследование причин
+5. Мониторить растения на признаки грибковых заболеваний
+
+### Scenario B: Quality Control
+
+**Situation:** Лабораторный анализ показал превышение допустимого уровня пестицида в готовой продукции.
+**Question:** Какая последовательность действий согласно GACP?
+
+**Correct Answer:**
+
+1. Поместить партию на карантин
+2. Инициировать OOS расследование
+3. Проверить retention samples
+4. Провести ретроспективный анализ процесса
+5. Реализовать CAPA
+6. Получить одобрение QP для дальнейших действий
+
+## 5. Exam Administration
+
+### 5.1 Pre-Exam Requirements
+
+- [ ] Сотрудник завершил курс CUR-001
+- [ ] Подписан доступ к экзаменационной системе
+- [ ] Назначено время и место проведения
+- [ ] Проверена техническая готовность
+
+### 5.2 During Exam
+
+- **Supervision:** Экзамен проводится под наблюдением
+- **Materials:** Запрещены справочные материалы
+- **Technology:** Использование GACP-ERP экзаменационного модуля
+- **Time Management:** Система автоматически завершает экзамен по истечении времени
+
+### 5.3 Post-Exam Processing
+
+- **Immediate Results:** Автоматический расчет результата
+- **Pass:** Сертификат выдается автоматически
+- **Fail:** Направление на дополнительное обучение
+- **Records:** Все результаты сохраняются в Training Records
+
+## 6. Scoring and Certification
+
+### 6.1 Scoring Criteria
+
+```yaml
+scoring_breakdown:
+  section_a_fundamentals: "20 points (40%)"
+  section_b_documentation: "20 points (40%)"
+  section_c_cultivation: "20 points (40%)"
+  section_d_quality_control: "20 points (40%)"
+  section_e_safety_compliance: "20 points (40%)"
+  total_possible: "100 points"
+  passing_threshold: "80 points"
+```
+
+### 6.2 Certificate Generation
+
+**Upon Successful Completion:**
+
+- Digital certificate issued through GACP-ERP
+- QR code for verification
+- Valid for 12 months
+- Automatic renewal reminders
+
+### 6.3 Remedial Training
+
+**For Failed Attempts:**
+
+- Mandatory additional training modules
+- One-on-one coaching session
+- Focus on failed sections
+- 24-hour cooling period before retake
+
+## 7. Quality Assurance
+
+### 7.1 Exam Validation
+
+- **Content Review:** Annual review by subject matter experts
+- **Statistical Analysis:** Performance analytics and item analysis
+- **Feedback Integration:** Continuous improvement based on results
+- **Compliance Verification:** Regular audit of exam content vs. regulatory requirements
+
+### 7.2 Security Measures
+
+- **Anti-Cheating:** Randomized question order
+- **Time Limits:** Strict time enforcement
+- **Access Control:** Role-based exam access
+- **Audit Trail:** Complete exam session logging
+
+## 8. Integration with GACP-ERP
+
+### 8.1 System Features
+
+```yaml
+erp_integration:
+  user_management:
+    - "Automatic user enrollment"
+    - "Progress tracking"
+    - "Certification status"
+
+  reporting:
+    - "Individual performance reports"
+    - "Department compliance dashboards"
+    - "Regulatory reporting"
+
+  workflow:
+    - "Automatic certificate generation"
+    - "Renewal notifications"
+    - "Training record updates"
+```
+
+### 8.2 Data Management
+
+- **Training Records:** Permanent retention in GACP-ERP
+- **Audit Trail:** Complete examination history
+- **Reporting:** Real-time compliance dashboards
+- **Export:** Regulatory inspection ready reports
+
+## 9. Revision History
+
+| Version | Date       | Description                                                                                                         | Author           |
+| ------- | ---------- | ------------------------------------------------------------------------------------------------------------------- | ---------------- |
+| 0.1     | 2025-09-01 | Initial template (10 questions)                                                                                     | System           |
+| 1.0     | 2025-09-15 | Comprehensive 50-question exam with scenarios, detailed sections, GACP compliance mapping, and full ERP integration | Training Manager |
+
+## 10. Appendices
+
+### Appendix A: GACP Reference Guide
+
+- WHO GACP Guidelines quick reference
+- Key regulatory requirements summary
+- Common terminology definitions
+
+### Appendix B: Study Materials
+
+- Recommended reading list
+- Online resources and videos
+- Practice question bank
+
+### Appendix C: Technical Requirements
+
+- System requirements for online exam
+- Browser compatibility information
+- Troubleshooting guide
+
+---
+
+**Note:** This exam is conducted electronically through the GACP-ERP training module with automatic scoring, certification, and record keeping.
